[package]
name = "windows-native"
version = "0.51.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_System_ApplicationInstallationAndServicing",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Ioctl",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Power",
    "Win32_System_Performance_HardwareCounterProfiling",
    "Win32_System_JobObjects",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_IO",
    "Wdk_Foundation",
    "Wdk_System_SystemServices",
], default-features = false }
