[package]
name = "windows-native"
version = "1.0.37"
authors = ["NiiightmareXD"]
edition = "2021"
description = "Windows Native Undocumented API for Rust Language 🔥"
readme = "README.md"
repository = "https://github.com/NiiightmareXD/windows-native"
license = "MIT"
keywords = ["native", "windows", "ffi", "win32", "com"]
categories = ["os::windows-apis", "api-bindings", "external-ffi-bindings"]

[dependencies]
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_System_ApplicationInstallationAndServicing",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Ioctl",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_System_Power",
    "Win32_System_Performance_HardwareCounterProfiling",
    "Win32_System_JobObjects",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_IO",
    "Wdk_Foundation",
    "Wdk_System_SystemServices",
    "Wdk_Storage_FileSystem",
    "Win32_System_Diagnostics_Etw",
    "Win32_Security_Authentication_Identity",
    "Wdk_System_SystemInformation",
    "Wdk_Storage_FileSystem",
    "Wdk_System_Threading",
    "Wdk_System_Registry",
    "Win32_System_PasswordManagement",
], default-features = false }
